# topoflow-glacier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  LICENSE  NOTICE.txt  README.md  mkdocs.yml  pyproject.toml
config/: cat-3062784.yaml  cat-3062920-const.yaml  cat-3062920.yaml  cat-3062924.yaml  cat-3062927.yaml
data/: 12082500.gpkg  sample-cat-3062920.csv
docs/: index.md
docs/user_guide/: config.md  index.md
examples/: EDFS_wolverine.py  run_topoflow_glacier.py  run_topoflow_glacier_const.py
src/topoflow-glacier/: BMI_base.py  glacier_base.py  glacier_energy_balance.py  ice_base.py  solar_funcs.py
src/topoflow_glacier/: BMI_base.py  __init__.py  glacier_base.py  glacier_energy_balance.py  met_base.py  met_base_NGWPC.py  model_input.py
src/topoflow_glacier/bmi/: bmi_base.py  bmi_topoflow_glacier.py  config.py  logger.py
src/topoflow_glacier/physics/: context.py  solar_funcs.py
tests/: confest.py  conftest.py  integration_test.py  test_config.py
tests/data/: output_m_total.npy
